[package]
name = "webreg_calendar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = { version = "0.7.4", features = ["multipart"] }
chrono = "0.4.31"
ical = { version = "0.9.0", default-features = false, features = ["ical", "generator"] }
scraper = "0.18.1"
shuttle-axum = { version = "0.41.0" }
shuttle-runtime = "0.41.0"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }

